# aiInterview

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
config/: default_config.json
include/common/: config.h  interview_state.h  logger.h  utils.h
include/interview/: dialog_session.h  interview_manager.h
include/services/: llm_client.h  pdf_parser.h
include/ui/: MainWindow.h  config_dialog.h
src/: main_qt.cpp
src/common/: config.cpp  interview_state.cpp  logger.cpp
src/interview/: dialog_session.cpp  interview_manager.cpp
src/services/: llm_client.cpp  pdf_parser.cpp
src/ui/: MainWindow.cpp  config_dialog.cpp
testModule/: spdlog.cpp  test.cpp  webSocket.cpp
